# cookiecutter-richtyper

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: pyproject.toml  readme.md
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/: __init__.py  __main__.py  main.py  settings.py
